libs/extractor/tests/snapshots/snapshots/extractor__tests__extract_selector-15.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Box} from '@devup-ui/core'\n        <Box selectors={{\n          \".test-picker__day--keyboard-selected\": {\n            _hover: {\n              bg: \"$primary\"\n            },\n            selectors: {\n              \"&:active\": {\n                bg: \"$primary\"\n              }\n            }\n          }\n        }} />\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "$primary",
                level: 0,
                selector: Some(
                    Selector(
                        "& .test-picker__day--keyboard-selected:active",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "$primary",
                level: 0,
                selector: Some(
                    Selector(
                        "& .test-picker__day--keyboard-selected:hover",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n<div className=\"a b\" />;\n",
}
